// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrivateLayout/> PrivateLayout snapshots user is on gamegroup page 1`] = `
<div>
  <PrivateHeader />
  <aside
    className="LeftAside"
  />
  <main
    className="Main"
  >
    <Connect(GameGroupContainer) />
  </main>
  <aside
    className="RightAside"
  />
</div>
`;

exports[`<PrivateLayout/> PrivateLayout snapshots user is on gamegroup page 2`] = `
<div>
  <PrivateHeader />
  <aside
    className="LeftAside"
  />
  <main
    className="Main"
  >
    <withRouter(Connect(GameItemContainer)) />
  </main>
  <aside
    className="RightAside"
  />
</div>
`;

exports[`<PrivateLayout/> PrivateLayout snapshots user is on login or signup page 1`] = `
<div>
  <PrivateHeader />
  <aside
    className="LeftAside"
  />
  <main
    className="Main"
  >
    <Feed />
  </main>
  <aside
    className="RightAside"
  />
</div>
`;

exports[`<PrivateLayout/> PrivateLayout snapshots user is on profile page 1`] = `
<div>
  <PrivateHeader />
  <aside
    className="LeftAside"
  />
  <main
    className="Main"
  >
    <Connect(ProfileContainer) />
  </main>
  <aside
    className="RightAside"
  />
</div>
`;
